# mkdocs-print-site-plugin

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  MANIFEST.in  README.md  contributing.html  demo_content.html  index.html  mkdocs.yml  options.html  print_page.html  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  sitemap.xml  standalone.html
.github/workflows/: pythonpublish.yml  unittests.yml  unittests_codecov.yml
docs/: contributing.md  cover_page.md  customization.md  demo_content.md  index.md  options.md  print_button.md
docs/customization/: cover_page.md  do_not_print.md  pdf_button.md  print_button.md
docs/how-to/: banner.md  cover_page.md  do_not_print.md  export-HTML.md  export-PDF.md  pdf_button.md  print_button.md
docs/overrides/: main.html
how-to/: banner.html  cover_page.html  do_not_print.html  export-HTML.html  export-PDF.html  pdf_button.html  print_button.html
javascripts/: config.js
mkdocs_print_site_plugin/: plugin.py  renderer.py  test_urls.py  urls.py  utils.py
mkdocs_print_site_plugin/css/: material.css  mkdocs.css  print-site-enum-headings1.css  print-site-material.css  print-site-mkdocs.css  print-site.css  print_site.css
mkdocs_print_site_plugin/js/: material.js  print-site-material.js  print-site-toc.js  print-site.js  toc.js
mkdocs_print_site_plugin/templates/: cover_page.tpl  print_site_banner.tpl
overrides/: main.html
search/: search_index.json
src/mkdocs_print_site_plugin/: __init__.py  exclude.py  plugin.py  renderer.py  urls.py  utils.py
src/mkdocs_print_site_plugin/css/: print-site-readthedocs.css  print-site.css
src/mkdocs_print_site_plugin/js/: print-site.js
src/mkdocs_print_site_plugin/templates/: cover_page.tpl
tests/: conftest.py  test_building.py  test_exclude.py  test_requirements.txt  test_urls.py
tests/fixtures/basic/: mkdocs_weird_nav.yml  mkdocs_with_nav_and_theme.yml
tests/fixtures/basic/docs/: index.md  subsection1.md  z.md
tests/fixtures/projects/bad_headings/: mkdocs.yml
tests/fixtures/projects/bad_headings/docs/: index.md  section.md  subsection2.md  z.md
tests/fixtures/projects/basic/: mkdocs.yml  mkdocs_addtonav_false.yml  mkdocs_do_not_print.yml  mkdocs_material_disabled.yml  mkdocs_material_instant_loading.yml  mkdocs_material_with_enum_plugin.yml  mkdocs_material_with_git_plugin.yml  mkdocs_no_directory_urls.yml  mkdocs_no_toc.yml  mkdocs_readthedocs.yml  mkdocs_toc_depth.yml  mkdocs_toc_permalink.yml  mkdocs_weird_nav.yml  mkdocs_windmill.yml  mkdocs_with_enum.yml  mkdocs_with_include_and_theme.yml  mkdocs_with_multi_pdf_and_theme.yml  mkdocs_with_nav.yml  mkdocs_with_nav_addtonav_false.yml  mkdocs_with_nav_and_theme.yml
tests/fixtures/projects/basic/docs/: a.md  exclude.md  ignore_content.md  index.md  section.md  subsection1.md
tests/fixtures/projects/basic/docs/Sub1/: b.md  c.md  sub1_exclude.md
tests/fixtures/projects/basic/docs/Sub2/: d.md  e.md  sub2_exclude.md
tests/fixtures/projects/basic/docs/subfolder/: anotherpage.md
tests/fixtures/projects/mkdocs_material_tags/: mkdocs.yml
tests/fixtures/projects/mkdocs_material_tags/docs/: index.md
tests/fixtures/projects/nested_sections/: mkdocs.yml  mkdocs_basetheme.yml
tests/fixtures/projects/nested_sections/docs/: index.md  info.md  page1.md  page2.md  page3.md  page4.md  page5.md  page6.md  page7.md  page8.md
tests/fixtures/projects/relative_images/: mkdocs.yml  mkdocs_img2fig.yml  mkdocs_no_dir_urls.yml
tests/fixtures/projects/relative_images/docs/: About.md  index.md
tests/fixtures/projects/relative_images/docs/Chapter1/: Section1.md  Section2.md
tests/fixtures/projects/relative_images/docs/Chapter2/: Section1.md  Section2.md
tests/fixtures/projects/snippets/: mkdocs.yml
tests/fixtures/projects/snippets/docs/: index.md
tests/fixtures/projects/snippets/includes/: bla.md  content.html
tests/fixtures/projects/tables/: mkdocs.yml
tests/fixtures/projects/tables/docs/: index.md  long.md  wide.md
tests/fixtures/projects/with_markdown_ext/: mkdocs.yml  mkdocs_details.yml  mkdocs_diff_cover_page.yml  mkdocs_img2fig.yml  mkdocs_with_toc.yml  other_cover_page.tpl
tests/fixtures/projects/with_markdown_ext/docs/: appendix.md  images.md  index.md  two.md
tests/fixtures/projects/with_markdown_ext/docs/extensions/: pymdown.md
tests/fixtures/projects/with_markdown_ext/docs/folder/: subpage.md
tests/fixtures/projects/with_markdown_ext/docs/folder/subfolder/: nested_file.md
tests/fixtures/projects/with_markdown_ext/docs/overrides/: main.html
tests/fixtures/with_markdown_ext/: mkdocs.yml
tests/fixtures/with_markdown_ext/docs/: index.md
tests/fixtures/with_markdown_ext/docs/extensions/: codehilite.md  metadata.md  permalinks.md
