[build-system]
requires = ["setuptools>=70.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project.entry-points."mkdocs.plugins"]
"print-site" = "mkdocs_print_site_plugin.plugin:PrintSitePlugin"

[project]
name="mkdocs-print-site-plugin"
keywords = ["mkdocs", "plugin","print","pdf"]
authors = [
    { name = "Tim Vink", email = "vinktim@gmail.com" }
]
license = { text = "MIT" }

description="MkDocs plugin that combines all pages into one, allowing for easy export to PDF and standalone HTML."
readme = { file = "README.md", content-type = "text/markdown" }

requires-python=">=3.8"

classifiers=[
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Documentation",
    "Topic :: Text Processing",
]

dynamic = ["version"]
dependencies = [
    "mkdocs-material>=7.3.0",
]

[project.urls]
"Homepage" = "https://github.com/timvink/mkdocs-print-site-plugin"

[tool.setuptools.dynamic]
version = {attr = "mkdocs_print_site_plugin.__version__"}

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration, meaning they use databases (deselect with '-m \"not integration\"')",
    "serial",
    "no_temp_caching",
]

# https://github.com/charliermarsh/ruff
[tool.ruff]

# Rules to apply
lint.select= ["E", "F", "I", "UP"]

# Exclude rules
lint.ignore = ['D104'
        ,'D212'
        ,'D200'
        ,'D412'
        ,'E731'
        ,'E501'
        ,'E722'
        ,'D104'
        ,'E402'
        ,"UP038" # UP038 Use `X | Y` in `isinstance` call instead of `(X, Y)`
]

# Exclude files in tests dir
lint.exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Set line length, keep same as black
line-length = 120

extend-exclude = [
        "*.yml",
        "*.toml",
        "*.md",
        ".json",
        "Makefile",
        "*.txt",
]

 #supported for python 3.10
target-version = "py310" 

# Always autofix
fix = true

[dependency-groups]
dev = [
    "click>=8.1.8",
    "mkdocs>=1.6.1",
    "mkdocs-charts-plugin>=0.0.12",
    "mkdocs-git-revision-date-localized-plugin>=1.4.4",
    "mkdocs-img2fig-plugin>=0.9.3",
    "mkdocs-material>=9.6.7",
    "mkdocs-windmill>=1.0.5",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.10",
]

